syntax="proto3";

package auth;

option java_multiple_files = true;
option java_package = "org.example.auth.proto";
// 指定生成的 Java 包名
option java_outer_classname = "AuthProto";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
}

message DeliverTokenReq {
  int32  user_id= 1;
}

message VerifyTokenReq {
  string token = 1;
}

message DeliveryResp {
  string token = 1;
}

message VerifyResp {
  bool res = 1;
}